--- a/cool-react-app/aws-3.yml
+++ b/cool-react-app/aws-3.yml
@@ -2,11 +2,11 @@ AWSTemplateFormatVersion: 2010-09-09
 Parameters:
   ProjectSource:
     Type: String
-    Default: https://github.com/mnfmnfm/cool-react
+    Default: https://github.com/wosunkwo/coolReactApp
     Description: "Source control URL (e.g. Github)"
   GithubOwner:
     Type: String
-    Default: mnfmnfm
+    Default: wosunkwo
   GithubRepo:
     Type: String
     Default: cool-react
